[tool.poetry]
name = "znak-api"
version = "0.1.0"
description = ""
authors = ["Minimalon <minimalonchik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
pydantic-settings = "^2.6.0"
uvicorn = "^0.32.0"
aiohttp = "^3.10.10"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
